# LexiconAI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
docs/: Technical Spec.md  features.md  telegram_bot.md  web_interface.md
nginx/: lexicon.conf.template
src/app/: dependencies.py  main.py  templates.py
src/app/routers/: linguistic.py  web.py
src/app/static/css/: styles.css
src/app/templates/: index.html
src/app/templates/partials/: result.html
src/bot/: handlers.py  keyboards.py  main.py
src/core/: __init__.py  config.py  schemas.py  validators.py
src/core/exceptions/: __init__.py  base.py
src/core/logger/: __init__.py  config.py
src/infrastructure/db/: __init__.py  base.py  models.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/repositories/: __init__.py  base.py  dictionary.py  history.py  user.py
src/services/linguistic/: __init__.py  chains.py  graph.py  service.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_chains.py
