[tool.poetry]
name = "lexicon-ai"
version = "0.1.0"
description = "Мультиплатформенный сервис (Web + Telegram) для лингвистического анализа"
authors = ["Andrey Kilanov <https://github.com/AndreyKilanov/LexiconAI>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
langchain = "^1.2.10"
langgraph = "^1.0.8"
langchain-openai = "^1.1.9"
aiogram = "^3.3.0"
pydantic-settings = "^2.1.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"
structlog = "^24.1.0"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []
fixable = ["ALL"]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
